# TagCleaner

./: .gitignore  README.md  pyproject.toml
docs/: DRAFTS.md  PATTERNS.md
scripts/: eval_corpus.py  harvest_etree.py  mine_corpus.py
src/tagcleaner/: __init__.py  banner.py  cli.py  dedupe.py  drafts.py  history.py  lexicon.py  models.py  parser.py  scanner.py  setlistfm.py  sources.py  tagger.py
src/tagcleaner/data/: starter-lexicon.json
tests/: conftest.py  test_cli.py  test_dedupe.py  test_drafts.py  test_history.py  test_lexicon.py  test_parser.py  test_scanner.py  test_sources.py  test_tagger.py
tests/fixtures/: silent.flac  silent.m4a
tests/fixtures/info_txt/: artwork_md5.txt  aucdtect_output.txt  beach_boys_smile_mashed.txt  disc1_checksum_disguised.txt  foo_dr_output.txt  kiss_brussels_unnumbered.txt  qango_unnumbered.txt  taj_mahal_bologna.txt
