[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tagcleaner"
version = "0.1.0"
description = "Clean concert/live-recording audio metadata from info.txt files, folder names, and existing tags."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Oren" }]
requires-python = ">=3.10"
keywords = ["flac", "metadata", "tagging", "concert", "bootleg", "live-music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "mutagen>=1.47",
    "python-dateutil>=2.8",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
tagcleaner = "tagcleaner.cli:main"

[project.urls]
Homepage = "https://github.com/auxren/TagCleaner"
Issues = "https://github.com/auxren/TagCleaner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tagcleaner"]

[tool.ruff]
line-length = 100
target-version = "py310"
